src/backend/optix/snapshots/cuda_test__backend__optix__test__scatter_reduce.snap
---
source: src/backend/optix/test.rs
expression: jit.kernel_debug()
---
===============================================
Kernel 13615343127521533792:

.version 8.0
.target sm_86
.address_size 64

.const .align 8 .b8 params[24];
.entry __raygen__cujit(){

	.reg.b8   %b <9>; .reg.b16 %w<9>; .reg.b32 %r<9>;
	.reg.b64  %rd<9>; .reg.f32 %f<9>; .reg.f64 %d<9>;
	.reg.pred %p <9>;

	call (%r0), _optix_get_launch_index_x, ();
	ld.const.u32 %r1, [params + 4];
	add.u32 %r0, %r0, %r1;

body:

	// [0]: ScheduleVar { op: Literal, deps: [], ty: U32, param_ty: None, reg: 5, buf: None, tex: None, accel: None, literal: 1, size: 1 } =>
	mov.b32 %r5, 0x1;


	// [1]: ScheduleVar { op: Data, deps: [], ty: U32, param_ty: None, reg: 6, buf: Some(0), tex: None, accel: None, literal: 0, size: 0 } =>

	// [2]: ScheduleVar { op: Data, deps: [], ty: U32, param_ty: Input, reg: 7, buf: Some(1), tex: None, accel: None, literal: 0, size: 3 } =>
	ld.const.u64 %rd0, [params+16];
	mad.wide.u32 %rd0, %r0, 4, %rd0;
	ld.global.cs.u32 %r7, [%rd0];

	// [3]: ScheduleVar { op: Literal, deps: [], ty: Bool, param_ty: None, reg: 8, buf: None, tex: None, accel: None, literal: 1, size: 1 } =>
	mov.pred %p8, 0x1;


	// [4]: ScheduleVar { op: Scatter { op: Add }, deps: [SVarId(0), SVarId(1), SVarId(2), SVarId(3)], ty: Void, param_ty: None, reg: 4, buf: None, tex: None, accel: None, literal: 0, size: 3 } =>
	@!%p8 bra l_4_done;

	ld.const.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r7, 4, %rd0;
	red.global.add.u32 [%rd3], %r5;
	l_4_done:

	ret;
}

